refactor: adopt Banira text services